--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,42 +1,60 @@
+[package]
+authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+edition = '2018'
+homepage = 'https://substrate.dev'
+license = 'Unlicense'
+name = 'node-template-runtime'
+repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+version = '2.0.0-rc5'
+
+[package.metadata.docs.rs]
+targets = ['x86_64-unknown-linux-gnu']
+
 [dependencies.aura]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-aura'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.balances]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-balances'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.0'
+version = '1.3.1'
 
 [dependencies.frame-executive]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.frame-support]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.grandpa]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-grandpa'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.randomness-collective-flip]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-randomness-collective-flip'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.serde]
 features = ['derive']
@@ -44,112 +62,110 @@ optional = true
 version = '1.0.101'
 
 [dependencies.sp-api]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-block-builder]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-consensus-aura]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-version = '0.8.0-alpha.7'
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '0.8.0-rc5'
 
 [dependencies.sp-core]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-inherents]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
-
-[dependencies.sp-io]
 git = 'https://github.com/paritytech/substrate.git'
-default-features = false
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-offchain]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-runtime]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-session]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-std]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-transaction-pool]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sp-version]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
-tag = 'v2.0.0-rc2'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.sudo]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-sudo'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.system]
+default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-default-features = false
 package = 'frame-system'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
-[dependencies.token]
+[dependencies.template]
 default-features = false
-package = 'pallet-token'
-path = '../pallets/token'
-version = '2.0.0-rc2'
+package = 'pallet-template'
+path = '../pallets/template'
+version = '2.0.0-rc5'
 
 [dependencies.timestamp]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-timestamp'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [dependencies.transaction-payment]
-git = 'https://github.com/paritytech/substrate.git'
 default-features = false
+git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-transaction-payment'
-tag = 'v2.0.0-rc2'
+tag = 'v2.0.0-rc5'
+version = '2.0.0-rc5'
 
 [build-dependencies.wasm-builder-runner]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-wasm-builder-runner'
+tag = 'v2.0.0-rc5'
 version = '1.0.5'
-
-[package]
-authors = ['Anonymous']
-edition = '2018'
-homepage = 'https://substrate.dev'
-license = 'Unlicense'
-name = 'node-template-runtime'
-repository = 'https://github.com/paritytech/substrate/'
-version = '2.0.0-rc2'
-
-[package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
 
 [features]
 default = ['std']
@@ -167,7 +183,6 @@ std = [
     'sp-consensus-aura/std',
     'sp-core/std',
     'sp-inherents/std',
-    'sp-io/std',
     'sp-offchain/std',
     'sp-runtime/std',
     'sp-session/std',
@@ -178,5 +193,5 @@ std = [
     'system/std',
     'timestamp/std',
     'transaction-payment/std',
-    'token/std',
+    'template/std',
 ]
